commit and push through VS code

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     
     <p>first commit</p>
     <p>and first push</p>
+
+    <p>trying to add and commit from VS Code</p>
     
 </body>
 </html>
